crates/solidity/testing/snapshots/bindings_output/contracts/constructor_call_parent/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ConstantKeyword or Identifier or InternalKeyword or PrivateKeyword or PublicKeyword.
   ╭─[input.sol:4:16]
   │
 4 │ ╭─▶     constructor() Base() {
 5 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Base {}
   │          ──┬─  
   │            ╰─── def: 1
   │ 
 3 │ contract Test is Base {
   │          ──┬─    ──┬─  
   │            ╰─────────── def: 2
   │                    │   
   │                    ╰─── ref: 1
 4 │     constructor() Base() {
   │     ─────┬─────  
   │          ╰─────── unresolved
───╯
